--- a/.github/workflows/parse+process.yml
+++ b/.github/workflows/parse+process.yml
@@ -18,7 +18,7 @@ on:
 jobs:
   parse-and-process:
     runs-on: ubuntu-latest  # Primary worker node
-    timeout-minutes: 30
+    timeout-minutes: 15
 
     steps:
       - name: Checkout repository
@@ -33,129 +33,33 @@ jobs:
         run: |
           pip install -r requirements.txt
 
-      - name: Run parser with retry logic
+      - name: Run and save parser output
         run: |
-          echo "🚀 Starting data parsing with retry mechanism..."
-          
-          MAX_RETRIES=3
-          RETRY_COUNT=0
-          SUCCESS=false
-          
-          while [ $RETRY_COUNT -lt $MAX_RETRIES ] && [ "$SUCCESS" = false ]; do
-            echo "🔄 Parse attempt $((RETRY_COUNT + 1))/$MAX_RETRIES"
-            rm -f moon_data.json parse_error.log
-            if python parse_data.py > moon_data.json 2> parse_error.log; then
-              if [ -f "moon_data.json" ] && [ -s "moon_data.json" ]; then
-                echo "✅ Raw moon data collected successfully"
-                echo "📊 File size: $(wc -c < moon_data.json) bytes"
-                echo "📝 Preview:"
-                head -c 300 moon_data.json
-                echo ""
-                SUCCESS=true
-              else
-                echo "❌ Empty or missing JSON file created"
-                RETRY_COUNT=$((RETRY_COUNT + 1))
-                [ $RETRY_COUNT -lt $MAX_RETRIES ] && sleep $((RETRY_COUNT * 10))
-              fi
-            else
-              echo "❌ Parse attempt $((RETRY_COUNT + 1)) failed:"
-              if [ -f "parse_error.log" ]; then
-                cat parse_error.log
-              fi
-              if [ -f "moon_data.json" ]; then
-                echo "📋 Partial output in moon_data.json:"
-                cat moon_data.json
-              fi
-              RETRY_COUNT=$((RETRY_COUNT + 1))
-              [ $RETRY_COUNT -lt $MAX_RETRIES ] && sleep $((RETRY_COUNT * 10))
-            fi
-          done
-          
-          if [ "$SUCCESS" = false ]; then
-            echo "💥 All parse attempts failed"
-            exit 1
-          fi
-          
+          python parse_data.py > moon_data.json
           echo "✅ Raw moon data collected in moon_data.json"
           ls -la moon_data.json
 
       - name: Read JSON to env var
         id: json
         run: |
-          echo "📋 Reading JSON file..."
-          if [ ! -f "moon_data.json" ]; then
-            echo "❌ moon_data.json file not found"
-            exit 1
-          fi
-          
-          if [ ! -s "moon_data.json" ]; then
-            echo "❌ moon_data.json file is empty"
-            exit 1
-          fi
-          
-          echo "📊 File size: $(wc -c < moon_data.json) bytes"
-          echo "📝 First 200 characters:"
-          head -c 200 moon_data.json
-          echo ""
-          CONTENT=$(cat moon_data.json)
-          
-          if [ -z "$CONTENT" ]; then
-            echo "❌ Failed to read file content"
-            exit 1
-          fi
-          
-          CONTENT="${CONTENT//'%'/'%25'}"
-          CONTENT="${CONTENT//$'\n'/'%0A'}"
-          CONTENT="${CONTENT//$'\r'/'%0D'}"
-          
+          CONTENT=$(cat moon_data.json | python3 -c 'import json,sys; print(json.dumps(json.load(sys.stdin)))')
           echo "MOON_JSON=$CONTENT" >> $GITHUB_ENV
-          echo "✅ Data loaded into environment variable (${#CONTENT} characters)"
+          echo "✅ JSON data loaded into environment variable"
 
-      - name: Launch bot with retry logic
+      - name: Launch bot with Selenium
         env:
           PA_USERNAME: ${{ secrets.PA_USERNAME }}
           PA_PASSWORD: ${{ secrets.PA_PASSWORD }}
           MOON_JSON: ${{ env.MOON_JSON }}
         run: |
-          echo "🚀 Launching selenium controller bot with retry mechanism..."
-          
-          MAX_RETRIES=3
-          RETRY_COUNT=0
-          SUCCESS=false
-          
-          while [ $RETRY_COUNT -lt $MAX_RETRIES ] && [ "$SUCCESS" = false ]; do
-            echo "🔄 Bot attempt $((RETRY_COUNT + 1))/$MAX_RETRIES"
-            rm -f moon_data_processed.json bot_error.log
-            
-            if python bot_launcher.py 2> bot_error.log; then
-              if [ -f "moon_data_processed.json" ] && [ -s "moon_data_processed.json" ]; then
-                echo "✅ Bot processing completed successfully"
-                SUCCESS=true
-              else
-                echo "❌ Processed file not created or empty"
-                RETRY_COUNT=$((RETRY_COUNT + 1))
-                [ $RETRY_COUNT -lt $MAX_RETRIES ] && sleep $((RETRY_COUNT * 15))
-              fi
-            else
-              echo "❌ Bot attempt $((RETRY_COUNT + 1)) failed:"
-              if [ -f "bot_error.log" ]; then
-                cat bot_error.log
-              fi
-              RETRY_COUNT=$((RETRY_COUNT + 1))
-              [ $RETRY_COUNT -lt $MAX_RETRIES ] && sleep $((RETRY_COUNT * 15))
-            fi
-          done
-          
-          if [ "$SUCCESS" = false ]; then
-            echo "💥 All bot attempts failed"
-            exit 1
-          fi
+          echo "🚀 Launching a selenium controller bot for data processing in the PA node enviroment..."
+          python bot_launcher.py
 
       - name: Verify processed file
         run: |
           if [ -f "moon_data_processed.json" ]; then
             echo "✅ The processed file was created successfully!"
-            echo "📊 File size: $(wc -c < moon_data_processed.json) bytes"
+            echo "📊 File size: $(wc -c < moon_data_processed.json) byte"
             echo "📝 First 200 characters:"
             head -c 200 moon_data_processed.json
             echo ""
@@ -185,4 +89,4 @@ jobs:
           else
             echo "⚠️ The processed file was not created."
           fi
-          echo "✅ Workflow completed with retry mechanisms active. Waiting for the worker environment to complete post steps."
+          echo "✅ Workflow completed. Waiting for the worker environment to complete post steps."
