--- a/.github/workflows/parse+process.yml
+++ b/.github/workflows/parse+process.yml
@@ -10,17 +10,24 @@ name: Moon Data Parser and Processor
 
 # Future implementation: GA worker commits processed data to repo (triggering Pages rebuild daily)
 
+# This workflow performs up to 3 sequential attempts of parsing and processing moon data.
+# Each attempt is a separate job (attempt1, attempt2, attempt3) linked via `needs` and `if`.
+# Logic: attempt2 runs only if attempt1 fails (result == 'failure'), attempt3 runs only if attempt2 fails.
+# The success/failure of an attempt is determined by the "Verify processed file" step:
+#   - If moon_data_processed.json is found → the job exits successfully (exit code 0).
+#   - If the file is missing → the job exits with an error (exit 1), triggering the next attempt.
+# This ensures that if the first or second attempt succeeds, subsequent attempts are skipped
+# and the workflow finishes early.
+
 on:
   workflow_dispatch: 
   schedule:
     - cron: '0 0 * * *' 
-    - cron: '0 2 * * *'  
     
 jobs:
-  parse-and-process:
+  parse-and-process-attempt1: 
     runs-on: ubuntu-latest  # Primary worker node
     timeout-minutes: 15
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -31,8 +38,7 @@ jobs:
           python-version: "3.10"
 
       - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
+        run: pip install -r requirements.txt
 
       - name: Run and save parser output
         run: |
@@ -53,7 +59,7 @@ jobs:
           PA_PASSWORD: ${{ secrets.PA_PASSWORD }}
           MOON_JSON: ${{ env.MOON_JSON }}
         run: |
-          echo "🚀 Launching a selenium controller bot for data processing in the PA node enviroment..."
+          echo "🚀 Launching a selenium controller bot for data processing in the PA node environment..."
           python bot_launcher.py
 
       - name: Verify processed file
@@ -68,10 +74,10 @@ jobs:
           else
             echo "❌ Processed file not found"
             ls -la *.json || echo "No JSON files"
+            exit 1
           fi
 
       - name: Upload processed result
-        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: moon-data-processed
@@ -90,4 +96,161 @@ jobs:
           else
             echo "⚠️ The processed file was not created."
           fi
-          echo "✅ Workflow completed. Waiting for the worker environment to complete post steps."
+
+  parse-and-process-attempt2:
+    needs: parse-and-process-attempt1
+    if: ${{ needs.parse-and-process-attempt1.result == 'failure' }}
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+    steps:
+      - name: Wait before retry
+        run: |
+          echo "⏳ Waiting 5 minutes before retry..."
+          sleep 300
+
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+
+      - name: Run and save parser output
+        run: |
+          python parse_data.py > moon_data.json
+          echo "✅ Raw moon data collected in moon_data.json"
+          ls -la moon_data.json
+
+      - name: Read JSON to env var
+        id: json
+        run: |
+          CONTENT=$(cat moon_data.json | python3 -c 'import json,sys; print(json.dumps(json.load(sys.stdin)))')
+          echo "MOON_JSON=$CONTENT" >> $GITHUB_ENV
+          echo "✅ JSON data loaded into environment variable"
+
+      - name: Launch bot with Selenium
+        env:
+          PA_USERNAME: ${{ secrets.PA_USERNAME }}
+          PA_PASSWORD: ${{ secrets.PA_PASSWORD }}
+          MOON_JSON: ${{ env.MOON_JSON }}
+        run: |
+          echo "🚀 Launching a selenium controller bot for data processing in the PA node environment..."
+          python bot_launcher.py
+
+      - name: Verify processed file
+        run: |
+          if [ -f "moon_data_processed.json" ]; then
+            echo "✅ The processed file was created successfully!"
+            echo "📊 File size: $(wc -c < moon_data_processed.json) byte"
+            echo "📝 First 200 characters:"
+            head -c 200 moon_data_processed.json
+            echo ""
+            echo "..."
+          else
+            echo "❌ Processed file not found"
+            ls -la *.json || echo "No JSON files"
+            exit 1
+          fi
+
+      - name: Upload processed result
+        uses: actions/upload-artifact@v4
+        with:
+          name: moon-data-processed
+          path: |
+            moon_data.json
+            moon_data_processed.json
+          retention-days: 30
+
+      - name: Show final status
+        if: always()
+        run: |
+          echo "📋 Final status:"
+          ls -la *.json || echo "No JSON files"
+          if [ -f "moon_data_processed.json" ]; then
+            echo "✅ Processing completed successfully!"
+          else
+            echo "⚠️ The processed file was not created."
+          fi
+
+  parse-and-process-attempt3:
+    needs: parse-and-process-attempt2
+    if: ${{ needs.parse-and-process-attempt2.result == 'failure' }}
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+    steps:
+      - name: Wait before final retry
+        run: |
+          echo "⏳ Waiting 10 minutes before final retry..."
+          sleep 600
+
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+
+      - name: Run and save parser output
+        run: |
+          python parse_data.py > moon_data.json
+          echo "✅ Raw moon data collected in moon_data.json"
+          ls -la moon_data.json
+
+      - name: Read JSON to env var
+        id: json
+        run: |
+          CONTENT=$(cat moon_data.json | python3 -c 'import json,sys; print(json.dumps(json.load(sys.stdin)))')
+          echo "MOON_JSON=$CONTENT" >> $GITHUB_ENV
+          echo "✅ JSON data loaded into environment variable"
+
+      - name: Launch bot with Selenium
+        env:
+          PA_USERNAME: ${{ secrets.PA_USERNAME }}
+          PA_PASSWORD: ${{ secrets.PA_PASSWORD }}
+          MOON_JSON: ${{ env.MOON_JSON }}
+        run: |
+          echo "🚀 Launching a selenium controller bot for data processing in the PA node environment..."
+          python bot_launcher.py
+
+      - name: Verify processed file
+        run: |
+          if [ -f "moon_data_processed.json" ]; then
+            echo "✅ The processed file was created successfully!"
+            echo "📊 File size: $(wc -c < moon_data_processed.json) byte"
+            echo "📝 First 200 characters:"
+            head -c 200 moon_data_processed.json
+            echo ""
+            echo "..."
+          else
+            echo "❌ Processed file not found"
+            ls -la *.json || echo "No JSON files"
+            exit 1
+          fi
+
+      - name: Upload processed result
+        uses: actions/upload-artifact@v4
+        with:
+          name: moon-data-processed
+          path: |
+            moon_data.json
+            moon_data_processed.json
+          retention-days: 30
+
+      - name: Show final status
+        if: always()
+        run: |
+          echo "📋 Final status:"
+          ls -la *.json || echo "No JSON files"
+          if [ -f "moon_data_processed.json" ]; then
+            echo "✅ Processing completed successfully!"
+          else
+            echo "⚠️ The processed file was not created."
+          fi
